Setup subdomain tracking.

--- a/ga.html
+++ b/ga.html
@@ -2,6 +2,7 @@
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-24168052-5']);
+  _gaq.push(['_setDomainName', '.learncodethehardway.org']);
   _gaq.push(['_trackPageview']);
 
   (function() {
